# Object-Oriented-Programming

a1-AlexandraMiresan-1/: CMakeLists.txt  problem1.c
a10-AlexandraMiresan-1/: CMakeLists.txt  UserModel.cpp  UserModel.h  admin.csv  admin.html  admin.txt  guidesigner.cpp  guidesigner.h  guidesigner.ui  main.cpp
a10-AlexandraMiresan-1/Domain/: IdGenerator.cpp  IdGenerator.h
a10-AlexandraMiresan-1/Repository/: EventList.cpp  Repository.cpp  Repository.h
a10-AlexandraMiresan-1/Service/: Administrator.cpp  Administrator.h  User.cpp  User.h
a10-AlexandraMiresan-1/UndoRedo/: UndoRedo.h  UndoRedoAdd.h  UndoRedoRemove.h  UndoRedoUpdate.h
a2-AlexandraMiresan-1/: CMakeLists.txt  main.c
a2-AlexandraMiresan-1/Controller/: estateController.c  estateController.h
a2-AlexandraMiresan-1/Domain/: estate.c  estate.h  estateVector.h
a2-AlexandraMiresan-1/DynnamicArray/: dynnamicArray.c  dynnamicArray.h
a2-AlexandraMiresan-1/Repository/: estates_repository.c  estates_repository.h
a2-AlexandraMiresan-1/UI/: UI.c  UI.h
a4-5-AlexandraMiresan/: CMakeLists.txt  main.cpp
a4-5-AlexandraMiresan/Domain/: Event.cpp  Event.h  IdGenerator.cpp
a4-5-AlexandraMiresan/DynamicVector/: DynamicVector.h
a4-5-AlexandraMiresan/Repository/: Repository.cpp  Repository.h
a4-5-AlexandraMiresan/Service/: Administrator.cpp  Administrator.h  User.cpp  User.h
a4-5-AlexandraMiresan/Tests/: Tests.cpp  Tests.h
a4-5-AlexandraMiresan/UI/: UI.cpp  UI.h
a6-7-AlexandraMiresan/: CMakeLists.txt  admin.csv  admin.html  admin.txt  main.cpp
a6-7-AlexandraMiresan/Domain/: Event.h
a6-7-AlexandraMiresan/Repository/: CSVEventList.h  EventList.cpp  EventList.h  HTMLEventList.cpp  HTMLEventList.h  Repository.cpp  Repository.h
a6-7-AlexandraMiresan/Service/: Administrator.cpp  Administrator.h  User.cpp  User.h
a6-7-AlexandraMiresan/Tests/: Tests.cpp  Tests.h
a6-7-AlexandraMiresan/UI/: UI.h
a8-9-AlexandraMiresan/: CMakeLists.txt  admin.csv  admin.txt  guidesigner.cpp  guidesigner.h  guidesigner.ui  main.cpp
a8-9-AlexandraMiresan/Repository/: CSVEventList.cpp  CSVEventList.h  EventList.cpp  EventList.h  HTMLEventList.h  Repository.cpp  Repository.h
a8-9-AlexandraMiresan/Service/: Administrator.h  User.cpp  User.h
a8-9-AlexandraMiresan/Tests/: Tests.cpp  Tests.h
a8-9-AlexandraMiresan/UI/: GUI.cpp  GUI.h  UI.cpp  UI.h
a8-9-AlexandraMiresan/Validator/: RepositoryValidator.h
e-915-AlexandraMiresan/: CMakeLists.txt  events.txt  main.cpp  people.txt
e-915-AlexandraMiresan/Controller/: EventsController.cpp  EventsController.h  PeopleController.cpp  PeopleController.h
e-915-AlexandraMiresan/Domain/: Event.cpp  Event.h  Location.cpp  Location.h  Person.cpp  Person.h
e-915-AlexandraMiresan/GUI/: personwindow.cpp  personwindow.h  personwindow.ui
e-915-AlexandraMiresan/Observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
e-915-AlexandraMiresan/Repository/: EventsRepository.cpp  EventsRepository.h  PeopleRepository.cpp  PeopleRepository.h
e-915-AlexandraMiresan/TableModel/: TableModel.cpp  TableModel.h
e-retake-AlexandraMiresan/: CMakeLists.txt  chefs.txt  main.cpp  recipes.txt
e-retake-AlexandraMiresan/Domain/: Chef.cpp  Chef.h  Recipe.cpp  Recipe.h
e-retake-AlexandraMiresan/GUI/: chefwindow.cpp  chefwindow.h  chefwindow.ui  viewwindow.cpp  viewwindow.h  viewwindow.ui
e-retake-AlexandraMiresan/Observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
e-retake-AlexandraMiresan/Repository/: ChefsRepo.cpp  ChefsRepo.h  RecipesRepo.cpp  RecipesRepo.h
e-retake-AlexandraMiresan/Service/: Chefs.cpp  Chefs.h  Recipes.cpp  Recipes.h
e-retake-AlexandraMiresan/TableModel/: TableModel.cpp  TableModel.h
t1-AlexandraMiresan-1/: CMakeLists.txt  DynamicVector.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  WeatherStation.cpp  WeatherStation.h  main.cpp
t2-AlexandraMiresan-1/: CMakeLists.txt  Controller.cpp  Controller.h  HospitalDepartment.cpp  HospitalDepartment.h  NeonatalUnit.cpp  NeonatalUnit.h  Surgery.cpp  Surgery.h  UI.cpp  UI.h  main.cpp
t3-AlexandraMiresan/: CMakeLists.txt  Controller.cpp  Controller.h  TimeInterval.cpp  TimeInterval.h  gui.cpp  gui.h  gui.ui  main.cpp
